manifests/platform-config/perses/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: perses-allow-all-ingress
  namespace: redhat-ods-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: perses-operator
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-scrape
  namespace: openshift-apiserver
spec:
  podSelector:
    matchLabels:
      apiserver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
      ports:
        - port: 17698
          protocol: TCP
